--- a/configs/waybar/config
+++ b/configs/waybar/config
@@ -1,17 +1,19 @@
 {
-    "layer": "top",
-    "position": "top",
-    "mod": "dock",
-    "exclusive": true,
-    "passthrough": false,
-    "modules-left": [
-        "hyprland/workspaces",
-        "hyprland/window"
-    ],
-    "modules-center": [
-        "clock"
-    ],
-     "modules-right": [
+  "layer": "top",
+  "position": "top",
+  "mod": "dock",
+  "exclusive": true,
+  "passthrough": false,
+
+  "modules-left": [
+  "hyprland/window"
+  ],
+
+  "modules-center": [
+    "clock"
+  ],
+
+  "modules-right": [
     "custom/spotify",
     "memory",
     "cpu",
@@ -21,16 +23,16 @@
     "pulseaudio#microphone",
     "network",
     "custom/power"
-      ],
+    ],
 
-   "custom/spotify": {
+  "custom/spotify": {
     "exec": "STATUS=$(playerctl status --player=spotify 2>/dev/null); if [ \"$STATUS\" = \"Playing\" ]; then ICON=''; elif [ \"$STATUS\" = \"Paused\" ]; then ICON=''; else echo ''; exit 0; fi; INFO=$(playerctl metadata --player=spotify --format '{{ artist }} - {{ title }}'); echo \"$ICON $INFO\"",
     "interval": 2,
     "format": "{}",
     "on-click": "playerctl play-pause --player=spotify"
   },
 
- "memory": {
+  "memory": {
     "states": {
       "c": 90,
       "h": 60,
@@ -47,15 +49,14 @@
     "tooltip-format": "󰾆 {percentage}%\n {used:0.1f}GB/{total:0.1f}GB"
   },
 
-
-     "cpu": {
+  "cpu": {
     "interval": 10,
     "format": "󰍛 {usage}%",
     "format-alt": "{icon0}{icon1}{icon2}{icon3}",
     "format-icons": ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█"]
   },
 
-    "network": {
+  "network": {
     "tooltip": true,
     "format-wifi": "  {essid}",
     "format-ethernet": "󰈀 ",
@@ -67,7 +68,7 @@
     "interval": 2
   },
 
-    "battery": {
+  "battery": {
     "states": {
       "good": 95,
       "warning": 30,
@@ -81,9 +82,9 @@
       "󰂃", "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿",
       "󰂀", "󰂁", "󰂂", "󰁹"
     ]
-  },  
+  },
 
-    "backlight": {
+  "backlight": {
     "device": "intel_backlight",
     "format": "{icon} {percent}%",
     "format-icons": ["󰃞", "󰃟", "󰃠"],
@@ -121,46 +122,42 @@
     "scroll-step": 5
   },
 
-    "clock": {
-        "format": "{:%I:%M %p}",
-        "tooltip-format": "<big>{:%Y %B}</big>\n<tt>{calendar}</tt>",
-        "calendar": {
-            "mode": "month",
-            "mode-icons": {
-              "month": ""
-            },
-            "weeks-pos": "right",
-            "on-scroll": 1,
-            "format": {
-              "months": "<span color='#ffead3'><b>{}</b></span>",
-              "weekdays": "<span color='#ffcc66'><b>{}</b></span>",
-              "today": "<span color='#ff6699'><b>{}</b></span>"
-            }
-        },
-        "interval": 1
+  "clock": {
+    "format": "{:%I:%M %p}",
+    "tooltip-format": "<big>{:%Y %B}</big>\n<tt>{calendar}</tt>",
+    "calendar": {
+      "mode": "month",
+      "mode-icons": {
+        "month": ""
+      },
+      "weeks-pos": "right",
+      "on-scroll": 1,
+      "format": {
+        "months": "<span color='#ffead3'><b>{}</b></span>",
+        "weekdays": "<span color='#ffcc66'><b>{}</b></span>",
+        "today": "<span color='#ff6699'><b>{}</b></span>"
+      }
     },
-    
-    "custom/power": {
-        "format": "",
-         "tooltip": true,
-         "tooltip-format": "Left: Shutdown\nMiddle: Logout\nRight: Reboot",
-         "on-click": "systemctl poweroff",
-         "on-click-middle": "hyprctl dispatch exit",
-         "on-click-right": "systemctl reboot",
-         "interval": 3600
-    },
+    "interval": 1
+  },
 
-    "hyprland/workspaces": {
-        "on-click": "activate"
-    },
-    
-    "hyprland/window": {
-      "format": "{}",
-      "max-length": 40
-    },
-    
-    "tray": {
-        "icon-size": 14,
-        "spacing": 10
-    }
+  "custom/power": {
+    "format": "",
+    "tooltip": true,
+    "tooltip-format": "Left: Shutdown\nMiddle: Logout\nRight: Reboot",
+    "on-click": "systemctl poweroff",
+    "on-click-middle": "hyprctl dispatch exit",
+    "on-click-right": "systemctl reboot",
+    "interval": 3600
+  },
+
+  "hyprland/window": {
+    "format": "  {}",
+    "max-length": 40
+  },
+
+ "tray": {
+   "icon-size": 14,
+   "spacing": 10
+}
 }
