--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -53,6 +53,7 @@ $mainMod = SUPER
 
 # Launchers and apps
 bind = $mainMod, RETURN, exec, $terminal
+bind = $mainMod SHIFT, Return, exec, $terminal --title floating
 bind = $mainMod, Escape, exec, hyprctl dispatch exit
 bind = $mainMod, F, exec, kitty -e /home/gerard/.config/scripts/startyazi.sh
 bind = $mainMod, D, exec, $menu
@@ -67,14 +68,25 @@ bind = $mainMod, M, exit,
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, pseudo,
 bind = $mainMod, J, togglesplit
+# Move focus with mainMod + arrow keys
+bind = $mainMod, j, movefocus, d
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, h, movefocus, l
 
-# Focus movement
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+# Move active window around current workspace with mainMod + SHIFT + CTRL [←→↑↓]
+bind = $mainMod $CONTROL, j, movewindow, d
+bind = $mainMod $CONTROL, k, movewindow, u
+bind = $mainMod $CONTROL, l, movewindow, r
+bind = $mainMod $CONTROL, h, movewindow, l
 
-# Workspaces
+# Resize windows
+binde = $mainMod, left, resizeactive,-50 0
+binde = $mainMod, right, resizeactive,50 0
+binde = $mainMod, up, resizeactive,0 -50
+binde = $mainMod, down, resizeactive,0 50
+
+# Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -86,6 +98,7 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
+# Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
@@ -97,13 +110,26 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Scroll through workspaces
+# Move window silently to workspace Super + Alt + [0-9]
+bind = $mainMod ALT, 1, movetoworkspacesilent, 1
+bind = $mainMod ALT, 2, movetoworkspacesilent, 2
+bind = $mainMod ALT, 3, movetoworkspacesilent, 3
+bind = $mainMod ALT, 4, movetoworkspacesilent, 4
+bind = $mainMod ALT, 5, movetoworkspacesilent, 5
+bind = $mainMod ALT, 6, movetoworkspacesilent, 6
+bind = $mainMod ALT, 7, movetoworkspacesilent, 7
+bind = $mainMod ALT, 8, movetoworkspacesilent, 8
+bind = $mainMod ALT, 9, movetoworkspacesilent, 9
+bind = $mainMod ALT, 0, movetoworkspacesilent, 10
+
+# Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
-# Mouse window control
+# Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
 
 # Media keys
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
@@ -128,8 +154,8 @@ general {
  border_size = 3
  
  # Pywal generated border colors
- col.active_border = $color4 $color1 $color4 45deg
- col.inactive_border = $color8 $color8 $color8 45deg
+col.active_border = $color4
+col.inactive_border = $color8
  
  resize_on_border = false
  allow_tearing = false
@@ -150,38 +176,34 @@ general {
  }
  
  blur {
- enabled = true
- size = 3
- passes = 1
- vibrancy = 0.1696
+        enabled = true
+        size = $blur_size
+        passes = $blur_pass
+        ignore_opacity = true
+        noise = 0.01
+        contrast = 1
+        popups = true
+        popups_ignorealpha = 0.5
  }
  }
 
 animations {
     enabled = true
-
-    bezier = easeOutQuint,0.23,1,0.32,1
-    bezier = easeInOutCubic,0.65,0.05,0.36,1
-    bezier = linear,0,0,1,1
-    bezier = almostLinear,0.5,0.5,0.75,1.0
-    bezier = quick,0.15,0,0.1,1
-
-    animation = global, 1, 10, default
-    animation = border, 1, 5.39, easeOutQuint
-    animation = windows, 1, 4.79, easeOutQuint
-    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
-    animation = windowsOut, 1, 1.49, linear, popin 87%
-    animation = fadeIn, 1, 1.73, almostLinear
-    animation = fadeOut, 1, 1.46, almostLinear
-    animation = fade, 1, 3.03, quick
-    animation = layers, 1, 3.81, easeOutQuint
-    animation = layersIn, 1, 4, easeOutQuint, fade
-    animation = layersOut, 1, 1.5, linear, fade
-    animation = fadeLayersIn, 1, 1.79, almostLinear
-    animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
+    bezier = overshot,0.13,0.99,0.29,1.15
+    bezier = win,0.37,0.51,0,1.28
+    bezier = wind, 0.05, 0.9, 0.1, 1.05
+    bezier = winIn, 0.1, 1.1, 0.1, 1.1
+    bezier = winOut, 0.3, -0.3, 0, 1
+    bezier = liner, 1, 1, 1, 1
+        
+    animation = windowsIn, 1, 5, overshot, slide
+    animation = windowsOut, 1, 5, overshot, slide
+    animation = windowsMove, 1, 5, wind, slide
+    animation = border, 1, 1, liner
+    animation = fade, 1, 10, default
+    animation = workspaces, 1, 7, overshot, slidevert
+    animation = layersIn, 1, 5, overshot, slide top
+    animation = layersOut, 1, 7, overshot, slide right
 }
 
 #############################
