--- a/configs/tofi/tofi.template
+++ b/configs/tofi/tofi.template
@@ -1,19 +1,20 @@
-width = 50%
+width = 15%
 height = 40%
-border-width = 0
+border-width = 2
 outline-width = 0
 padding-left = 1%
 padding-top = 1%
 result-spacing = 25
 num-results = 10
 
-font = JetBrainsMono Nerd Font
+font = CaskaydiaCove Nerd Font
 font-size = 12
 
-text-color = {color7}
+text-color = #f0f0f0
 
 prompt-text = " : "
 
-background-color = {color0}cc
-selection-color = {color4}ff
-selection-text-color = {color15}
+background-color = #1a1a1acc
+selection-color = #7d7c7cff
+selection-text-color = #000000
+border-color = {color4}ff
