--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -1,4 +1,6 @@
-#source = ~/.cache/wal/colors-hyprland.conf
+source = ~/.cache/wal/colors-hyprland.conf
+
+
 
 ################
 ### MONITORS ###
@@ -159,7 +161,6 @@ general {
  # Pywal generated border colors
 col.active_border = $color4
 col.inactive_border = $color8
- 
  resize_on_border = false
  allow_tearing = false
  layout = dwindle
