--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -60,7 +60,7 @@ bind = $mainMod SHIFT, Return, exec, $terminal --title floating
 bind = $mainMod, Escape, exec, hyprctl dispatch exit
 bind = $mainMod, F, exec, kitty -e /home/gerard/.config/scripts/startyazi.sh
 bind = $mainMod, D, exec, $menu
-bind = $mainMod, W, exec, ~/.config/scripts/setwall.sh
+bind = $mainMod, W, exec, ~/.config/scripts/wallpaper-picker.py
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, C, exec, $editor
 bind = $mainMod, S, exec, $music
@@ -271,5 +271,7 @@ windowrulev2 = float,class:^(blueman-manager)$
 windowrulev2 = float,class:^(nm-applet)$
 windowrulev2 = float,class:^(nm-connection-editor)$
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
+
+windowrulev2 = float,opacity 0.8,class:^(python3)$,title:^(Pick a wallpaper)$
 
 # windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
