--- a/configs/fastfetch/config.jsonc
+++ b/configs/fastfetch/config.jsonc
@@ -1,157 +1,98 @@
-// Load with --load-config examples/2.jsonc
-// Note that you must replace the image path to an existing image to display it.
-
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
+
     "logo": {
-        "padding": {
-            "top": 2
-        }
+        "source": "arch",
+        "padding": { "top": 0, "left": 2 },   // logo inset
+        "width": 24,
+        "height": 6,
+        "preserveAspectRatio": true
     },
+
     "display": {
-        "separator": " -> ",
-        "constants": [
-            "──────────────────────────────"
-        ]
+        "separator": " → ",
+        "constants": ["───────────────────────────────────────────"]
     },
+
     "modules": [
+
+    
+
+        // TOP COLOR BAR (aligned with logo)
         {
             "type": "custom",
-            "format": "┌{$1}{$1}┐",
-            "outputColor": "90"
+            "format": "{#31}█ {#32}█ {#33}█ {#34}█ {#35}█ {#36}█ {#37}█ {#38}█ {#39}█ {#38}█ {#37}█ {#36}█ {#35}█ {#34}█ {#33}█ {#32}█ {#31}█"
         },
-        {
-            "type": "title",
-            "keyWidth": 10
-        },
-        {
-            "type": "custom",
-            "format": "└{$1}{$1}┘",
-            "outputColor": "90"
-        },
+"break",
+        { "type": "title", "keyWidth": 12 },
+
+        // SYSTEM INFO
         {
             "type": "custom",
-            "format": " {#90}  {#31}  {#32}  {#33}  {#34}  {#35}  {#36}  {#37}  {#38}  {#39}       {#38}  {#37}  {#36}  {#35}  {#34}  {#33}  {#32}  {#31}  {#90}"
+            "format": "{#31}┌ SYSTEM ──────────────┐"
         },
+        { "type": "os",       "key": " OS",     "keyColor": "31" },
+        { "type": "kernel",   "key": " Kernel","keyColor": "31" },
         {
             "type": "custom",
-            "format": "┌{$1}{$1}┐",
-            "outputColor": "90"
+            "format": "{#31}└─────────────────────┘"
         },
+
+        // DESKTOP INFO
         {
-            "type": "os",
-            "key": "{icon} OS",
-            "keyColor": "yellow"
+            "type": "custom",
+            "format": "{#34}┌ DESKTOP ────────────────┐"
         },
+        { "type": "wm",       "key": " WM",    "keyColor": "34" },
+        { "type": "wmtheme",  "key": " Theme","keyColor": "34" },
         {
-            "type": "kernel",
-            "key": "│ ├",
-            "keyColor": "yellow"
+            "type": "custom",
+            "format": "{#34}└─────────────────────┘"
         },
+
+        // HARDWARE INFO
         {
-            "type": "packages",
-            "key": "│ ├󰏖",
-            "keyColor": "yellow"
+            "type": "custom",
+            "format": "{#32}┌ HARDWARE ─────────────┐"
         },
+        { "type": "cpu",      "key": " CPU",  "keyColor": "32" },
+        { "type": "memory",   "key": "󰑭 RAM","keyColor": "32" },
         {
-            "type": "shell",
-            "key": "│ └",
-            "keyColor": "yellow"
+            "type": "custom",
+            "format": "{#32}└─────────────────────┘"
         },
+
+        // MEDIA
         {
-            "type": "wm",
-            "key": " DE/WM",
-            "keyColor": "blue"
+            "type": "custom",
+            "format": "{#36}┌ MEDIA ────────────────┐"
         },
-        {
-            "type": "lm",
-            "key": "│ ├󰧨",
-            "keyColor": "blue"
-        },
-        {
-            "type": "wmtheme",
-            "key": "│ ├󰉼",
-            "keyColor": "blue"
-        },
-        {
-            "type": "icons",
-            "key": "│ ├󰀻",
-            "keyColor": "blue"
-        },
-        {
-            "type": "terminal",
-            "key": "│ ├",
-            "keyColor": "blue"
-        },
-        {
-            "type": "wallpaper",
-            "key": "│ └󰸉",
-            "keyColor": "blue"
-        },
-        {
-            "type": "host",
-            "key": "󰌢 PC",
-            "keyColor": "green"
-        },
-        {
-            "type": "cpu",
-            "key": "│ ├󰻠",
-            "keyColor": "green"
-        },
-        {
-            "type": "gpu",
-            "key": "│ ├󰍛",
-            "keyColor": "green"
-        },
-        {
-            "type": "disk",
-            "key": "│ ├",
-            "keyColor": "green"
-        },
-        {
-            "type": "memory",
-            "key": "│ ├󰑭",
-            "keyColor": "green"
-        },
-        {
-            "type": "swap",
-            "key": "│ ├󰓡",
-            "keyColor": "green"
-        },
-        {
-            "type": "uptime",
-            "key": "│ ├󰅐",
-            "keyColor": "green"
-        },
-        {
-            "type": "display",
-            "key": "│ └󰍹",
-            "keyColor": "green"
-        },
-        {
+        { 
             "type": "sound",
             "key": " SND",
             "keyColor": "cyan"
         },
-        {
-            "type": "player",
-            "key": "│ ├󰥠",
-            "keyColor": "cyan"
+        { 
+            "type": "player", 
+            "key": "󰥠", 
+            "keyColor": "36"
         },
-        {
-            "type": "media",
-            "key": "│ └󰝚",
-            "keyColor": "cyan"
+        { 
+            "type": "media", 
+            "key": "󰝚", 
+            "keyColor": "36" 
         },
         {
             "type": "custom",
-            "format": "└{$1}{$1}┘",
-            "outputColor": "90"
+            "format": "{#36}└─────────────────────┘"
         },
+
+        // BOTTOM COLOR BAR (aligned with logo)
         "break",
         {
             "type": "custom",
-            "format": " {#90}  {#31}  {#32}  {#33}  {#34}  {#35}  {#36}  {#37}  {#38}  {#39}       {#38}  {#37}  {#36}  {#35}  {#34}  {#33}  {#32}  {#31}  {#90}"
+            "format": "{#31}█ {#32}█ {#33}█ {#34}█ {#35}█ {#36}█ {#37}█ {#38}█ {#39}█ {#38}█ {#37}█ {#36}█ {#35}█ {#34}█ {#33}█ {#32}█ {#31}█"
         }
+
     ]
 }
