--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -12,7 +12,6 @@ monitor=,2560x1440@165, auto, 1
 ###################
 $terminal = kitty
 $fileManager = yazi
-$menu = tofi-drun -c ~/.cache/wal/tofi --drun-launch=true
 $editor = code
 $browser = firefox
 $imageViewer = oculante
@@ -23,8 +22,8 @@ $music = spotify
 #################
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP XDG_SESSION_TYPE
 exec-once = swww-daemon
-exec-once = waybar
-exec-once = dunst
+exec-once = env DBUS_SESSION_BUS_ADDRESS=$DBUS_SESSION_BUS_ADDRESS WAYLAND_DISPLAY=$WAYLAND_DISPLAY waybar &
+exec-once = mako
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = blueman-applet
 
@@ -58,8 +57,8 @@ $mainMod = SUPER
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod SHIFT, Return, exec, $terminal --title floating
 bind = $mainMod, Escape, exec, hyprctl dispatch exit
-bind = $mainMod, F, exec, kitty -e /home/gerard/.config/scripts/startyazi.sh
-bind = $mainMod, D, exec, $menu
+bind = $mainMod, F, exec, kitty -e ~/.config/scripts/startyazi.sh
+bind = $mainMod, D, exec, ~/.config/scripts/app-picker.py
 bind = $mainMod, W, exec, ~/.config/scripts/wallpaper-picker.py
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, C, exec, $editor
@@ -271,7 +270,7 @@ windowrulev2 = float,class:^(blueman-manager)$
 windowrulev2 = float,class:^(nm-applet)$
 windowrulev2 = float,class:^(nm-connection-editor)$
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
-
+windowrulev2 = float,opacity 0.8,class:^(python3)$,title:^(Pick an Application)$
 windowrulev2 = float,opacity 0.8,class:^(python3)$,title:^(Pick a wallpaper)$
 
 # windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
